
2019-01-20  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_info): added note for cJSON

2019-01-05  Edward Hart <edward.dan.hart@gmail.com>

	* general: added JSON GENERATE statement
	* parser.y: added detection of JSON PARSE statement

2019-01-04  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_abort): increase error counter
	* error.c, cobc.h (cb_add_error_to_listing): extracted from (print_error)
	  and extended to display source reference if error message is not cached
	* cobc.c (cobc_err_msg, cobc_abort_terminate): include error message
	  in listing, if active
	* cobc.c (print_program_trailer): prevent printing of NULL file / prefix
	  and respect cb_msg_style
	* field.c (create_implicit_picture): fixed to not raise an abort for
	  FROM figurative-constant without PICTURE

2019-01-04  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c (get_reserved_words_with_amendments): if a user reserves a
	  default reserved word, context-sensitivity is now preserved only if
	  they specify it
	* reserved.c (default_reserved_words): fixed context-sensitive words
	  marked as not context-sensitive

2019-01-02  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (set_report_field): renamed to (set_report_field_offset)
	* field.c: refactored static functions and their calls to reduce
	  the number of calls and limited the scope of variables

2018-12-31  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c, tree.h, codegen.c, cobc.h: use EXTFH call per program,
	  not globally
	* pplex.l, ppparse.y, scanner.l, codegen.c: implement CALLFH
	  directive (Micro Focus)
	* reserved.c: fixed redefinition warning
	* scanner.l (#LINE): removed unneeded temporary string duplication
	* scanner.l (scan_x): minor refactoring and fixing compiler warning
	* parser.y, reserved.c: added parsing for ADDRESS OF FH--FCD /
	  FH--KEYDEF OF file-name (context-sensitive to SET)

2018-12-29  Simon Sobisch <simonsobisch@gnu.org>
